examples/rest-proxy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-proxy
  namespace: confluent
  labels:
    app: rest-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest-proxy
  template:
    metadata:
      labels:
        app: rest-proxy
    spec:
      containers:
      - name: rest-proxy
        image: confluentinc/cp-kafka-rest:7.5.0
        ports:
        - containerPort: 8082
